src/main/java/com/example/validation/error/dto/ErrorType.java
package com.example.validation.error.dto;

public enum ErrorType {
    VALIDATE,
    ERROR,
    ;
}
